--- a/routes_mapping.json
+++ b/routes_mapping.json
@@ -53,6 +53,7 @@
   "2F": {
     "routes": [
       [
+        ["__tuple__",["Signal_82", "Signal_83", "Signal_84", "Signal_85","Signal_86","Signal_87"], 20],
         "Signal_106",
         "Signal_120",
         "Signal_136",
