more bug fixes on signal pathing.

--- a/routes_mapping.json
+++ b/routes_mapping.json
@@ -124,6 +124,7 @@
   "2L": {
     "routes": [
       [
+        ["__tuple__",["Signal_82", "Signal_83", "Signal_84", "Signal_85","Signal_86","Signal_87"], 20],
         "Signal_106",
         "Signal_120",
         "Signal_136",
@@ -134,6 +135,6 @@
         "delete"
       ]
     ],
-    "spawning_signals": ["Signal_82", "Signal_83", "Signal_84", "Signal_85","Signal_86","Signal_87"]
+    "spawning_signals": []
   }
 }
