whitefield line train stops added

--- a/routes_mapping.json
+++ b/routes_mapping.json
@@ -58,26 +58,26 @@
         "Signal_120",
         "Signal_136",
         "Signal_153",
-        "Signal_188",
+        ["__tuple__","Signal_188",20],
         "Signal_198",
         "Signal_212",
         "Signal_208",
-        "Signal_200",
+        ["__tuple__","Signal_200",20],
         "Signal_194",
-        "Signal_192",
+        ["__tuple__","Signal_192",20],
         "Signal_177",
         "Signal_166",
-        "Signal_138",
+        ["__tuple__","Signal_138",20],
         "Signal_126",
         "Signal_110",
         "Signal_98",
         "Signal_94",
         "Signal_76",
-        "Signal_70",
+        ["__tuple__","Signal_70",20],
         "Signal_65",
         "Signal_61",
         "Signal_57",
-        "Signal_55",
+        ["__tuple__","Signal_55",20],
         "Signal_51",
         "Signal_49",
         "Signal_44",
@@ -90,27 +90,28 @@
   "2S": {
     "routes": [
       [
+        ["__tuple__",["Signal_82", "Signal_83", "Signal_84", "Signal_85","Signal_86","Signal_87"],20],
         "Signal_43",
         "Signal_50",
         "Signal_54",
-        "Signal_56",
+        ["__tuple__","Signal_56",20],
         "Signal_59",
         "Signal_63",
         "Signal_69",
-        "Signal_74",
+        ["__tuple__","Signal_74",20],
         "Signal_77",
         "Signal_97",
         "Signal_101",
         "Signal_112",
         "Signal_134",
-        "Signal_144",
+        ["__tuple__","Signal_144",20],
         "Signal_173",
-        "Signal_193",
+        ["__tuple__","Signal_193",20],
         "Signal_195",
-        "Signal_205",
+        ["__tuple__","Signal_205",20],
         "Signal_211",
         "Signal_203",
-        "Signal_180",
+        ["__tuple__","Signal_180",20],
         "Signal_151",
         "Signal_133",
         "Signal_118",
@@ -129,7 +130,7 @@
         "Signal_120",
         "Signal_136",
         "Signal_153",
-        "Signal_188",
+        ["__tuple__","Signal_188",20],
         "Signal_218",
         "Signal_221",
         "delete"
